<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/score_menu_button"
        android:title="@string/score"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/score_menu_count"
        android:title="0"
        app:showAsAction="always" />

    <item
        android:id="@+id/life"
        android:title="Vie"
        app:showAsAction="always" />


    <item
        android:id="@+id/life_count"
        android:title="3"
        app:showAsAction="always" />



    <item
        android:id="@+id/back_menu_button"
        android:title="@string/back" />
    <item
        android:id="@+id/delete_menu_button"
        android:title="@string/delete" />


</menu>